# abtest

./: .gitignore  BAYESIAN_IMPLEMENTATION.md  README.md  app.py  pyproject.toml  requirements.txt  verify_bayesian.py
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
notebook/: ab_test.ipynb  interactive_ab_test.ipynb
scripts/: app.py  examples.py  main.py
src/: bayesian.py  comparison.py  frequentist.py  results.py  test_data.py  visualization.py
tests/: __init__.py  conftest.py  test_bayesian.py  test_comparison.py  test_frequentist.py  test_results.py  test_test_data.py
