[project]
name = "abtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "scipy (>=1.16.3,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)"
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
]

